tests/snapshots/run_wpt_conformance__trtx_softplus_float16_0D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softplus.https.any.js",
    "softplus float16 0D tensor",
    "trtx",
    "PASS",
)
